# linux-wallpaperengine-ext

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: application.cpp  application.h  argument_parser.cpp  argument_parser.h  main.cpp  media_player.cpp  media_player.h
src/audio/: pulse_audio.cpp  pulse_audio.h
src/display/: display_manager.cpp  display_manager.h  sdl2_window_display.cpp  sdl2_window_display.h
src/display/wayland/: wayland_display.cpp  wayland_display.h  wayland_image_renderer.cpp  wayland_image_renderer.h  wayland_video_renderer.cpp  wayland_video_renderer.h  wlr_layer_shell_wrapper.h
src/display/x11/: x11_display.cpp  x11_display.h  x11_image_renderer.cpp  x11_image_renderer.h  x11_video_renderer.cpp  x11_video_renderer.h
